parser* methods in ContainerNode should not support DocumentFragment https://bugs.webkit.org/show_bug.cgi?id=103965

Patch by Elliott Sprehn <esprehn@chromium.org> on 2012-12-04
Reviewed by Darin Adler.

Only parserInsertBefore ever supported DocumentFragment and this feature
is never used. It appears this code ended up in parserInsertBefore when
it was created as a copy of insertBefore that didn't fire events. This
patch removes that code and adds assertions that we never pass
DocumentFragments since doing so would cause a corrupted tree as we never
check checkAcceptChild or do other validation in the parser methods.

No new tests, just refactoring.

* dom/ContainerNode.cpp:
(WebCore::ContainerNode::parserInsertBefore):
(WebCore::ContainerNode::parserRemoveChild):
(WebCore::ContainerNode::parserAppendChild):

Canonical link: https://commits.webkit.org/122166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136584 268f45cc-cd09-0410-ab3c-d52691b4dbfc